--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,12 @@ inputs:
     description: 'Run [ESlint](https://eslint.org/) on all matching files'
     required: false
     default: false
+  workspace: 'List of explicit [workspace](https://docs.npmjs.com/cli/v7/commands/npm-exec#workspace) to run [ESlint](https://eslint.org/) from'
+    required: false
+    default: '.'
+  workspaces: 'Enable running [ESlint](https://eslint.org/) in the context of all the configured [workspaces](https://docs.npmjs.com/cli/v7/commands/npm-exec#workspaces).'
+    required: false
+    default: false
   config_path:
     description: '[ESlint](https://eslint.org/) [configuration file](https://eslint.org/docs/user-guide/configuring/)'
     required: false
