--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Run ESLint on changed files
+name: ESLint changed files
 description: Run ESLint on all changed files
 author: jackton1
 inputs:
