--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,17 @@ jobs:
       - name: Install dependencies
         run: yarn
         working-directory: test-app
+      
+      - name: Run ESLint for a nested project with changed files and .eslintignore
+        uses: ./
+        with:
+          path: "test-app"
+          config_path: "package.json"
+          file_extensions: |
+            **/*.ts
+            **/*.tsx
+          extra_args: "--max-warnings=0"
+          ignore_path: ".eslintignore"
 
       - name: Run ESLint on changed files with .eslintignore
         uses: ./
