--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,6 +51,9 @@ jobs:
             **/*.tsx
           extra_args: "--max-warnings=0"
           ignore_path: ".eslintignore"
+      
+      - run: |
+          find /tmp -type f -name "*.txt" -exec cat {} \;
 
       - name: Run ESLint on changed files with .eslintignore
         uses: ./
