--- a/action.yml
+++ b/action.yml
@@ -65,6 +65,9 @@ runs:
     - uses: reviewdog/action-setup@v1
       with:
         reviewdog_version: v0.14.1
+    - run: |
+        git config diff.relative true
+      shell: bash
     - name: Get changed files
       id: changed-files
       uses: tj-actions/changed-files@v22.1
