--- a/action.yml
+++ b/action.yml
@@ -53,7 +53,7 @@ inputs:
     description: |
       Exit code for reviewdog when errors are found [true,false].
     required: false
-    default: 'false'
+    default: 'true'
   path:
    description: 'Relative path under GITHUB_WORKSPACE to the repository'
    required: false
