--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,10 @@ inputs:
     description: '[ESlint](https://eslint.org/) [configuration file](https://eslint.org/docs/user-guide/configuring/)'
     required: false
     default: '.eslintrc'
+  ignore_config_path:
+    description: 'Run [ESlint](https://eslint.org/) without --config flag, helpful when you have nested folders with .eslintrc files'
+    required: false
+    default: false
   ignore_path:
     description: '[ESlint](https://eslint.org/) [ignore file](https://eslint.org/docs/user-guide/configuring/ignoring-code)'
     required: false
@@ -93,6 +97,7 @@ runs:
         INPUT_ALL_FILES: ${{ inputs.all_files }}
         INPUT_CONFIG_PATH: ${{ inputs.config_path }}
         INPUT_IGNORE_PATH: ${{ inputs.ignore_path }}
+        INPUT_IGNORE_CONFIG_PATH: ${{ inputs.ignore_config_path }}
         INPUT_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
         INPUT_EXTRA_ARGS: ${{ inputs.extra_args }}
         INPUT_FILTER_MODE: ${{ inputs.filter_mode }}
