--- a/action.yml
+++ b/action.yml
@@ -11,13 +11,9 @@ inputs:
     required: false
     default: false
   config_path:
-    description: '[ESlint](https://eslint.org/) [configuration file](https://eslint.org/docs/user-guide/configuring/)'
+    description: '[ESlint](https://eslint.org/) [configuration file](https://eslint.org/docs/user-guide/configuring/). Optionally omit this input for Mono repositories.'
     required: false
     default: '.eslintrc'
-  ignore_config_path:
-    description: 'Run [ESlint](https://eslint.org/) without --config flag, helpful when you have a mono repository with multiple sub projects eash with a different .eslintrc file'
-    required: false
-    default: false
   ignore_path:
     description: '[ESlint](https://eslint.org/) [ignore file](https://eslint.org/docs/user-guide/configuring/ignoring-code)'
     required: false
