--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 0
 
       - name: Run auto-doc
-        uses: tj-actions/auto-doc@v1.7.2
+        uses: tj-actions/auto-doc@v1.7.1
 
       - name: Run test
         uses: tj-actions/remark@v3
@@ -25,18 +25,20 @@ jobs:
         with:
           files: |
             README.md
+
       - name: README.md changed
         if: steps.verify_changed_files.outputs.files_changed == 'true'
         run: |
-          echo "README.md has uncommited changes"
+          echo "README.md has uncommitted changes"
           exit 1
+
       - name: Create Pull Request
         if: failure()
-        uses: peter-evans/create-pull-request@v4
+        uses: peter-evans/create-pull-request@v4.2.3
         with:
           base: "main"
+          labels: "merge when passing"
           title: "Updated README.md"
-          lables: "merge when passing"
           branch: "chore/update-readme"
           commit-message: "Updated README.md"
           body: "Updated README.md"
