--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,7 @@ jobs:
         working-directory: test-app
 
       - name: Verify Changed files
+        if: failure()
         uses: tj-actions/verify-changed-files@v13
         id: verify-changed-files
         with:
@@ -57,7 +58,7 @@ jobs:
             **/*.{ts,tsx}
 
       - name: Commit outstanding changes
-        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        if: failure() && steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
@@ -65,7 +66,7 @@ jobs:
           git commit -m "lint fixes."
 
       - name: Push changes
-        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        if: failure() && steps.verify-changed-files.outputs.files_changed == 'true'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.PAT_TOKEN }}
