--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,11 +79,12 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest, windows-latest, macos-latest, macos-11, windows-2022]
+        fetch-depth: [0, 1]
 
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: ${{ matrix.fetch-depth }}
 
       - uses: actions/setup-node@v3.6.0
         with:
