--- a/action.yml
+++ b/action.yml
@@ -64,7 +64,7 @@ runs:
         reviewdog_version: v0.14.1
     - name: Get changed files
       id: changed-files
-      uses: tj-actions/changed-files@v35
+      uses: tj-actions/changed-files@fix/bug-with-fetching-history
       with:
         path: ${{ inputs.path }}
         files: ${{ inputs.file_extensions }}
