--- a/action.yml
+++ b/action.yml
@@ -59,12 +59,12 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - uses: reviewdog/action-setup@v1
+    - uses: reviewdog/action-setup@8f2ec89e6b467ca9175527d2a1641bbd0c05783b # renovate: tag=v1.0.3
       with:
         reviewdog_version: v0.14.1
     - name: Get changed files
       id: changed-files
-      uses: tj-actions/changed-files@v35
+      uses: tj-actions/changed-files@84ed30e2f4daf616144de7e0c1db59d5b33025e3  # renovate: tag=v35.6.4
       with:
         path: ${{ inputs.path }}
         files: ${{ inputs.file_extensions }}
