--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,14 +40,36 @@ jobs:
         run: yarn
         working-directory: test-app
 
-      - name: Run Lint
-        run: yarn lint
+      - name: Run Stylelint
+        run: yarn stylelint
         working-directory: test-app
+      
+      - name: Run ESLint for a nested project with changed files and .eslintignore
+        uses: ./
+        with:
+          path: "test-app"
+          config_path: ".eslintrc.js"
+          file_extensions: |
+            **/*.ts
+            **/*.tsx
+          extra_args: "--max-warnings=0"
+          ignore_path: ".eslintignore"
 
       - name: Fix Lint Errors
         if: failure()
-        run: yarn lint:fix
+        run: yarn stylelint:fix
         working-directory: test-app
+
+      - name: Fix ESLint errors for a nested project with changed files and .eslintignore
+        uses: ./
+        with:
+          path: "test-app"
+          config_path: ".eslintrc.js"
+          file_extensions: |
+            **/*.ts
+            **/*.tsx
+          extra_args: "--fix"
+          ignore_path: ".eslintignore"
 
       - name: Verify Changed files
         if: failure()
