--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,7 +72,7 @@ jobs:
           ignore_path: ".eslintignore"
 
       - name: Verify Changed files
-        if: failure()
+        if: always()
         uses: tj-actions/verify-changed-files@v13
         id: verify-changed-files
         with:
@@ -80,7 +80,7 @@ jobs:
             **/*.{ts,tsx}
 
       - name: Commit outstanding changes
-        if: failure() && steps.verify-changed-files.outputs.files_changed == 'true'
+        if: always() && steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
@@ -88,7 +88,7 @@ jobs:
           git commit -m "lint fixes."
 
       - name: Push changes
-        if: failure() && steps.verify-changed-files.outputs.files_changed == 'true'
+        if: always() && steps.verify-changed-files.outputs.files_changed == 'true'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.PAT_TOKEN }}
