--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,6 +99,7 @@ jobs:
   
   eslint-changed-files:
     runs-on: ${{ matrix.platform }}
+    needs: lint
     strategy:
       fail-fast: false
       matrix:
