--- a/action.yml
+++ b/action.yml
@@ -59,12 +59,12 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - uses: reviewdog/action-setup@8dc47785c4a3a899d16d7371637b070e600cd65f # renovate: tag=v1.0.4
+    - uses: reviewdog/action-setup@v1
       with:
         reviewdog_version: v0.14.1
     - name: Get changed files
       id: changed-files
-      uses: tj-actions/changed-files@9ecc6e7fe2e26945b52485ccd9bc4b44000f5af1 # v36.0.14
+      uses: tj-actions/changed-files@v36
       with:
         path: ${{ inputs.path }}
         files: ${{ inputs.file_extensions }}
