--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,10 @@ jobs:
           fetch-depth: 0 # otherwise, you will fail to push refs to dest repo
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
 
-      - uses: actions/setup-node@v3.8.1
+      - name: Setup Node.js 20.x
+        uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20.x
           cache: yarn
           cache-dependency-path: test-app/yarn.lock
 
@@ -111,9 +112,10 @@ jobs:
         with:
           fetch-depth: ${{ matrix.fetch-depth }}
 
-      - uses: actions/setup-node@v3.8.1
+      - name: Setup Node.js 20.x
+        uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20.x
           cache: yarn
           cache-dependency-path: test-app/yarn.lock
 
