--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -174,7 +174,7 @@ jobs:
           extra_args: "--max-warnings=0"
           all_files: true
 
-      - name: Run ESLint without --config flag
+      - name: Run ESLint on all files without a config_path
         uses: ./
         with:
           file_extensions: |
