--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
           cache-dependency-path: test-app/yarn.lock
 
       - name: Install dependencies
-        run: yarn
+        run: yarn install --frozen-lockfile
         working-directory: test-app
 
       - name: Run Stylelint
