Typo of description

--- a/action.yml
+++ b/action.yml
@@ -57,7 +57,7 @@ inputs:
    required: false
    default: '.'
   skip_initial_fetch:
-    desciption: "Skip fetching more histories when the repo is shallow, this is passed to [Changed Files](https://github.com/codesculpture/changed-files)" 
+    description: "Skip fetching more histories when the repo is shallow, this is passed to [Changed Files](https://github.com/codesculpture/changed-files)" 
     required: false
     default: false
 
