--- a/action.yml
+++ b/action.yml
@@ -57,7 +57,9 @@ inputs:
    required: false
    default: '.'
   skip_initial_fetch:
-    description: "Skip fetching more histories when the repo is shallow, this is passed to [Changed Files](https://github.com/tj-actions/changed-files)" 
+    description: |
+      Skip initially fetching additional history to improve performance for shallow repositories.
+      NOTE: This could lead to errors with missing history. It's intended to be used when you've fetched all necessary history to perform the diff.
     required: false
     default: false
 
