--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -117,35 +117,6 @@ jobs:
       - name: Install dependencies
         run: yarn
         working-directory: test-app
-      
-      - name: Run ESLint for a nested project with changed files and .eslintignore
-        uses: ./
-        with:
-          path: "test-app"
-          config_path: "eslint.config.mjs"
-          file_extensions: |
-            **/*.ts
-            **/*.tsx
-          extra_args: "--max-warnings=0"
-
-      - name: Run ESLint on changed files with .eslintignore
-        uses: ./
-        with:
-          config_path: "test-app/eslint.config.mjs"
-          file_extensions: |
-            **/*.ts
-            **/*.tsx
-          extra_args: "--max-warnings=0"
-
-      - name: Run ESLint on all files with .eslintignore
-        uses: ./
-        with:
-          config_path: "test-app/eslint.config.mjs"
-          file_extensions: |
-            **/*.ts
-            **/*.tsx
-          extra_args: "--max-warnings=0"
-          all_files: true
 
       - name: Run ESLint on changed files
         uses: ./
@@ -166,7 +137,7 @@ jobs:
           extra_args: "--max-warnings=0"
           all_files: true
 
-      - name: Run ESLint on all files without a config_path
+      - name: Run ESLint on all files without a config_path on all files
         uses: ./
         with:
           file_extensions: |
@@ -174,3 +145,13 @@ jobs:
             **/*.tsx
           extra_args: "--max-warnings=0"
           all_files: true
+
+      - name: Run ESLint for a nested project with changed files
+        uses: ./
+        with:
+          path: "test-app"
+          config_path: "eslint.config.mjs"
+          file_extensions: |
+            **/*.ts
+            **/*.tsx
+          extra_args: "--max-warnings=0"
