--- a/action.yml
+++ b/action.yml
@@ -74,6 +74,7 @@ runs:
     - name: Get changed files
       id: changed-files
       uses: tj-actions/changed-files@v44
+      if: inputs.all_files == 'false'
       with:
         path: ${{ inputs.path }}
         files: ${{ inputs.file_extensions }}
